<resources>
    <string-array name="near_future">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Day after tomorrow</item>
        <item>This week</item>
        <item>Next week</item>
    </string-array>

    <string-array name="months">
        <item>null</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="months_day">
        <item>null %1$d</item>
        <item>January %1$d</item>
        <item>February %1$d</item>
        <item>March %1$d</item>
        <item>April %1$d</item>
        <item>May %1$d</item>
        <item>June %1$d</item>
        <item>July %1$d</item>
        <item>August %1$d</item>
        <item>September %1$d</item>
        <item>October %1$d</item>
        <item>November %1$d</item>
        <item>December %1$d</item>
    </string-array>
    <string-array name="year_months_day">
        <item> null %2$d %1$d</item>
        <item>January %2$d %1$d</item>
        <item>February %2$d %1$d</item>
        <item>March %2$d %1$d</item>
        <item>April %2$d %1$d</item>
        <item>May %2$d %1$d</item>
        <item>June %2$d %1$d</item>
        <item>July %2$d %1$d</item>
        <item>August %2$d %1$d</item>
        <item>September %2$d %1$d</item>
        <item>October %2$d %1$d</item>
        <item>November %2$d %1$d</item>
        <item>December %2$d %1$d</item>
    </string-array>
    <string-array name="year_months_day_hour">
        <item> null %2$d %1$d, %3$dh</item>
        <item>January %2$d %1$d, %3$dh</item>
        <item>February %2$d %1$d, %3$dh</item>
        <item>March %2$d %1$d, %3$dh</item>
        <item>April %2$d %1$d, %3$dh</item>
        <item>May %2$d %1$d, %3$dh</item>
        <item>June %2$d %1$d, %3$dh</item>
        <item>July %2$d %1$d, %3$dh</item>
        <item>August %2$d %1$d, %3$dh</item>
        <item>September %2$d %1$d, %3$dh</item>
        <item>October %2$d %1$d, %3$dh</item>
        <item>November %2$d %1$d, %3$dh</item>
        <item>December %2$d %1$d, %3$dh</item>
    </string-array>
    <string name="app_name">Yearly</string>
    <string name="action_settings">Settings</string>
    <string name="birthday_from">%1$s\'s birthday</string>
    <string name="birthday_from_at">%1$s\'s birthday at %2$d/%3$d</string>
    <string name="action_set_alarm">set alarm</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="in_x_days">in %1$s days</string>
    <string name="adding_events_not_supported">Adding events is not supported yet...</string>
    <string name="action_archive">Archive</string>
    <string name="action_add_birthday">Add birthday</string>
    <string name="action_add_event">Add event</string>
    <string name="title_activity_add_birthday">Add birthday</string>
    <string name="first_name">First name</string>
    <string name="birthday">Birthday</string>
    <string name="last_name">Last name</string>
    <string name="select_date">Select date</string>
    <string name="nothig_added">Nothing added</string>
    <string name="add_birthday_for">Added birthday from %1$s</string>
    <string name="add_year">Add year</string>
    <string name="apply">apply</string>
    <string name="yyy_mm_dd">%1$d/%2$d/%3$d</string>
    <string name="mm_dd">%1$d/%2$d</string>
    <string name="title_activity_add_event">Add event</string>
    <string name="event_name">Event name</string>
    <string name="event_date">Date</string>
    <string name="on">on</string>
    <string name="day_after_tomorrow">day after tomorrow</string>
    <string name="add_event_for">add event %1$s</string>
    <string name="title_activity_show_birthday">Birthday</string>
    <string name="question_mark">\?</string>
    <string name="label_date">Date:</string>
    <string name="label_day">On:</string>
    <string name="label_next">In:</string>
    <string name="label_age">Age:</string>
    <string name="label_next_birthday">Next Birthday</string>
    <string name="label_birthday">Birthday</string>
    <string name="at">at</string>
    <string name="menu_share">Share</string>
    <string name="event">Event</string>
    <string name="delete">Delete</string>
    <string name="title_activity_list_birthdays">Birthdays</string>
    <string name="settings_preferences_category_alarm">Alarm</string>
    <string name="settings_preferences_current_alarm">Current alarm</string>
    <string name="action_save">save</string>
    <string name="add_birthday_throw_away">throw away</string>
    <string name="add_birthday_ask_throw_away_modifications">Are you sure you want to throw away the changes?</string>
    <string name="add_birthday_ask_throw_away_modifications_cancel">Keep modifying</string>
    <string name="settings_preferences_app_version">App version</string>
    <string name="settings_preferences_category_about">About</string>
    <string name="countdown_layout_months">MONTHS</string>
    <string name="countdown_layout_weeks">WEEKS</string>
    <string name="countdown_layout_days">DAYS</string>
    <string name="title_activity_archive">Store backup</string>
    <string name="title_activity_restore">Select backup file</string>
    <string name="action_restore">Restore</string>
    <string name="archive_activity_failed">Backup creation failed</string>
    <string name="archive_activity_success">Backup succeeded</string>
    <string name="restore_activity_success">Restore from backup succeeded</string>
    <string name="restore_activity_failed">Restore from backup failed</string>
    <string name="settings_preference_category_backup">Backup</string>
    <string name="settings_preference_make_backup">Make backup</string>
    <string name="settings_preference_restore_backup">Restore from backup</string>
    <string name="settings_alarm_set">Alarm set</string>
    <string name="settings_preferences_alarm_set_at">Alarm set at</string>
    <string name="settings_preferences_last_notification">Last notification</string>
    <string name="notification_channel_birthday_desc">Birthday events</string>
    <string name="notification_channel_birthday_name">Notifaction on birthday</string>
    <string name="notification_channel_day_before_birthday_name">Notification on day before birthday</string>
    <string name="notification_channel_day_before_birthday_desc">Notification the day before the birthday</string>
    <string name="notification_channel_2days_before_birthday_name">Notification 2 days before birthday</string>
    <string name="notification_channel_2days_before_birthday_desc">Notification 2 days before the birthday</string>
    <string name="notification_channel_group_default">Default</string>


</resources>
