<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/countdown_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="horizontal"
    android:weightSum="3.0">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/countdown_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:scaleX="1.0"
            android:scaleY="1.0"
            android:text="- -"
            android:textSize="45dp"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:lines="1"
            android:padding="0dp"
            android:text="@string/countdown_layout_months"
            android:textSize="12dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:gravity="center|top"
        android:padding="0dp"
        android:scaleX="1.0"
        android:scaleY="1.0"
        android:text=":"
        android:textSize="45dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/countdown_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="- -"
            android:textSize="45dp"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:lines="1"
            android:padding="0dp"
            android:text="@string/countdown_layout_weeks"
            android:textSize="12dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:gravity="center|top"
        android:padding="0dp"
        android:scaleX="1.0"
        android:scaleY="1.0"
        android:text=":"
        android:textSize="45dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/countdown_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="- -"
            android:textSize="45dp"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:lines="1"
            android:padding="0dp"
            android:text="@string/countdown_layout_days"
            android:textSize="12dp" />
    </LinearLayout>


</LinearLayout>